Adapt fix